<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_padding_default"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_name"
            app:helperText="@string/help_required"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/name_max_length"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_surname"
            app:helperText="@string/help_required"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/name_max_length"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/common_padding_default"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:hint="@string/hint_height"
                app:helperText="@string/help_min_height"
                app:startIconDrawable="@drawable/ic_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="@integer/height_max_length"
                    android:nextFocusForward="@id/etPlaceBirth"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:hint="@string/hint_date_of_birth"
                app:startIconDrawable="@drawable/ic_calendar_today"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country"
            android:layout_marginTop="@dimen/common_padding_default"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvCountries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_place_of_birth"
            app:startIconDrawable="@drawable/ic_place"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlaceBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:maxLength="@integer/place_birth_max_length"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_notes"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/notes_max_length"
            app:startIconDrawable="@drawable/ic_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="@integer/notes_max_length"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</ScrollView>